helper untuk tpp dan jabatan, penyesuaian test